    #392 fix thrust::copy between cusp::complex & std::complex
    #396 program compiled with gcc < 4.3 hangs during comparison sort
    #406 fallback_allocator.cu example checks device for unified addressing support
    #417 avoid using std::less<T> in binary search algorithms
    #418 avoid various warnings
    #443 including version.h no longer configures default systems

Known Issues
    When invoked with primitive data types, thrust::sort, thrust::sort_by_key, thrust::stable_sort, & thrust::stable_sort_by_key may
    fail to link in some cases with nvcc -rdc=true.

    The CUDA implementation of thrust::reduce_by_key incorrectly outputs the last element in a segment of equivalent keys instead of the first.

Acknowledgments
    Thanks to Sean Baxter for contributing faster CUDA reduce, merge, and scan implementations.
    Thanks to Duane Merrill for contributing a faster CUDA radix sort implementation.

#######################################
#           Thrust v1.7.2             #
#######################################

Summary
    Small bug fixes

Bug Fixes
    Avoid use of std::min in generic find implementation

#######################################
#           Thrust v1.7.1             #
#######################################

Summary
    Small bug fixes

Bug Fixes
    Eliminate identifiers in set_operations.cu example with leading underscore
    Eliminate unused variable warning in CUDA reduce_by_key implemention
    Avoid deriving function objects from std::unary_function and std::binary_function

#######################################
#           Thrust v1.7.0             #
#######################################

Summary
    Thrust 1.7.0 introduces a new interface for controlling algorithm execution as
    well as several new algorithms and performance improvements. With this new
    interface, users may directly control how algorithms execute as well as details
    such as the allocation of temporary storage. Key/value versions of thrust::merge