@@ -27,6 +27,8 @@ namespace detail
 namespace sequential
 {
 
+
+__thrust_hd_warning_disable__
 template<typename BidirectionalIterator1,
          typename BidirectionalIterator2>
 __host__ __device__
@@ -43,6 +45,7 @@ BidirectionalIterator2 copy_backward(BidirectionalIterator1 first,
 
   return result;
 }
+
 
 } // end namespace sequential
 } // end namespace detail
