@@ -34,6 +34,7 @@ namespace sequential
 {
 
 
+__thrust_hd_warning_disable__
 template<typename DerivedPolicy,
          typename InputIterator1,
          typename InputIterator2,
