@@ -36,6 +36,7 @@ namespace sequential
 {
 
 
+__thrust_hd_warning_disable__
 template<typename DerivedPolicy,
          typename ForwardIterator,
          typename BinaryPredicate>
@@ -65,6 +66,7 @@ ForwardIterator min_element(sequential::execution_policy<DerivedPolicy> &,
 }
 
 
+__thrust_hd_warning_disable__
 template<typename DerivedPolicy,
          typename ForwardIterator,
          typename BinaryPredicate>
@@ -94,6 +96,7 @@ ForwardIterator max_element(sequential::execution_policy<DerivedPolicy> &,
 }
 
 
+__thrust_hd_warning_disable__
 template<typename DerivedPolicy,
          typename ForwardIterator,
          typename BinaryPredicate>
