@@ -30,6 +30,7 @@ namespace sequential
 {
 
 
+__thrust_hd_warning_disable__
 template<typename DerivedPolicy,
          typename InputIterator1,
          typename InputIterator2,
@@ -70,6 +71,7 @@ OutputIterator merge(sequential::execution_policy<DerivedPolicy> &exec,
 } // end merge()
 
 
+__thrust_hd_warning_disable__
 template<typename DerivedPolicy,
          typename InputIterator1,
          typename InputIterator2,
