@@ -35,6 +35,7 @@ namespace sequential
 {
 
 
+__thrust_hd_warning_disable__
 template<typename DerivedPolicy,
          typename InputIterator, 
          typename OutputType,
