@@ -35,6 +35,7 @@ namespace sequential
 {
 
 
+__thrust_hd_warning_disable__
 template<typename DerivedPolicy,
          typename ForwardIterator,
          typename Predicate>
@@ -76,6 +77,7 @@ __host__ __device__
 }
 
 
+__thrust_hd_warning_disable__
 template<typename DerivedPolicy,
          typename ForwardIterator,
          typename InputIterator,
@@ -124,6 +126,7 @@ __host__ __device__
 }
 
 
+__thrust_hd_warning_disable__
 template<typename DerivedPolicy,
          typename InputIterator,
          typename OutputIterator,
@@ -155,6 +158,8 @@ __host__ __device__
   return result;
 }
 
+
+__thrust_hd_warning_disable__
 template<typename DerivedPolicy,
          typename InputIterator1,
          typename InputIterator2,
